--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: csharp
-mono: none
-dotnet: 5.0
 solution: Bossfight.sln
+addons:
+  apt:
+    packages:
+    - nuget
 install:
   - nuget restore Bossfight.sln
-  - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
+  - nuget install NUnit.Console -Version 2.8.7 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Release Bossfight.sln
-  - dotnet ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./TestBossFight/bin/Release/TestBossFight.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.2.8.7/tools/nunit3-console.exe ./TestBossFight/bin/Release/TestBossFight.dll
