--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: csharp
 solution: Bossfight.sln
+
 addons:
   apt:
     packages:
     - nuget
+
+mono: none
+dotnet: 5.0
+
 install:
   - nuget restore Bossfight.sln
-  - nuget install NUnit.Console -Version 2.8.7 -OutputDirectory testrunner
+  - nuget install NUnit.Console -Version 3.12.0 -OutputDirectory testrunner
+
 script:
   - msbuild /p:Configuration=Release Bossfight.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.2.8.7/tools/nunit3-console.exe ./TestBossFight/bin/Release/TestBossFight.dll
+  - dotnet ./testrunner/NUnit.ConsoleRunner.3.12.0/tools/nunit3-console.exe ./TestBossFight/bin/Release/TestBossFight.dll
