--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ addons:
   apt:
     packages:
     - nuget
-    - msbuild
 
 mono: none
 dotnet: 5.0
@@ -16,5 +15,5 @@ install:
   - dotnet add ./TestBossFight/TestBossFight.csproj package NUnit.Console --version 3.12.0 --package-directory testrunner
 
 script:
-  - msbuild /p:Configuration=Release Bossfight.sln
+  - dotnet build /p:Configuration=Release Bossfight.sln
   - dotnet ./testrunner/NUnit.ConsoleRunner.3.12.0/tools/nunit3-console.exe ./TestBossFight/bin/Release/TestBossFight.dll
