Fix wrong casing in Unit Test project file.

--- a/BossFight.Tests/BossFight.Tests.csproj
+++ b/BossFight.Tests/BossFight.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bossfight\BossFight.csproj" />
+    <ProjectReference Include="..\BossFight\BossFight.csproj" />
   </ItemGroup>
 
 </Project>
