Renamed as MysticHorizonsLib and made into library.
Also removed Program.cs as this project no longer should produce any executable.

--- a/MysticHorizonsLib.Tests/MysticHorizonsLib.Tests.csproj
+++ b/MysticHorizonsLib.Tests/MysticHorizonsLib.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BossFight\BossFight.csproj" />
+    <ProjectReference Include="..\MysticHorizonsLib\MysticHorizonsLib.csproj" />
   </ItemGroup>
 
 </Project>
