--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: BossFight.sln
+solution: MysticHorizonsLib.sln
 
 addons:
   apt:
@@ -10,9 +10,9 @@ mono: none
 dotnet: 5.0
 
 install:
-  - nuget restore BossFight.sln
-  - dotnet add ./BossFight.Tests/BossFight.Tests.csproj package NUnit.Console --version 3.12.0 --package-directory testrunner
+  - nuget restore MysticHorizonsLib.sln
+  - dotnet add ./MysticHorizonsLib.Tests/MysticHorizonsLib.Tests.csproj package NUnit.Console --version 3.12.0 --package-directory testrunner
 
 script:
-  - dotnet build /p:Configuration=Release BossFight.sln
+  - dotnet build /p:Configuration=Release MysticHorizonsLib.sln
   - dotnet test
